# Blockchain-Analyst-2024.7

./: BlockchainNetworksComparison.html  BlockchainNetworksComparison.md  ElGamalEncryption.md  FHE.md  IMProtocol.md  IMProtocolsAndApplications.md  Interview preparation.gdoc  Multi-signatureWallet.md  NeoBurger.md  NeoBurgerOptimization.md  NeoBurgerOverview.md  NeoNeoX.md  Oct 11th Meeting.md  PolynetAttackSummary.md  RecursiveZeroKnowledgeProof.md  ResponsiveWalletDemo.md  SafeWallet.md  SecurityPractices.md  SeptemberMeeting2.md  TokenStandards.md  WalletsOverview.md  WitnessEncryption.md  Xumm.gdoc  ZK projects.gsheet
Admin/: Siyi-Project log.gsheet
Meetings/: Oct 11th Meeting.md  Week 2 Log.gdoc  Week6.md  Week9.md
ProjectDemos/RecursiveZkpForFactorization/: README.md
ProjectDemos/RecursiveZkpForFactorization/bellman_rust/: Cargo.toml
ProjectDemos/RecursiveZkpForFactorization/halo2_factorization_recursive/: Cargo.toml
ProjectDemos/RecursiveZkpForFactorization/halo2_factorization_recursive/src/: main.rs
ProjectDemos/RecursiveZkpForFactorization/plonky_tryout_recursive/: Cargo.toml
ProjectDemos/recursive_zk_poc/o1js/: demo.ts  package-lock.json  package.json  recursive-zk-wallet.ts  tsconfig.json
Week 1 /: Week 1 Log.gdoc  Week 1 Report.gdoc  test_solidity.sol
Week 2/: FHE.md  Witness Encryption.md  multi-signature wallets.md  responsive_safe_wallet.md  safe_wallet.md
Week 2/Refinement_Week1_Reports/: different_classifications_ewallets.md
meeting11/: 26.md
references/: SmartContractAuditting.md
(+11 files in other folders)
